# zluuba-art-site

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: project-check.yml
zluuba_art/: __init__.py  app.py  constants.py  error_handlers.py  logger.py  urls.py  views.py
zluuba_art/logger/: configuration.py  logger.py
zluuba_art/static/: robots.txt
zluuba_art/static/css/: styles.css
zluuba_art/static/images/others/: favicon-96x96-raw.psd  logo-template.psd
zluuba_art/static/js/: footer.js  greeting.js
zluuba_art/templates/: cv.html  footer.html  index.html  internal_server_error.html  layout.html  links.html  page_not_found.html  pet_projects.html  projects.html
zluuba_art/templates/errors/: error.html  error_base.html  internal_server_error.html  page_not_found.html
zluuba_art/templates/projects/: games_of_terminal.html  page_analyzer.html  task_manager.html  zluuba_art_website.html
zluuba_art/tests/: conftest.py  test_app.py
